<resources>
    <string name="app_name">My OCR</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="add">Add</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="select_document_language">Select document language:</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="english">English</string>
    <string name="run_ocr">Run OCR</string>
    <string name="export">Export to PDF or DOCX</string>
    <string name="history">History</string>
    <string name="choose_image_source">Choose image source</string>
    <string name="take_photo">Take photo</string>
    <string name="upload_from_device">Upload from device</string>
    <string name="please_select_image">Please select an image first.</string>
    <string name="no_text_recognized">No text recognized.</string>
    <string name="export_file">Export file</string>
    <string name="export_coming_soon">Export to PDF/DOCX feature coming soon.</string>
    <string name="ok">OK</string>
    <string name="history_selected">History selected</string>
    <string name="permission_denied">Permission denied to read external storage</string>
    <string name="ocr_failed">OCR failed: %1$s</string>
    <string name="ocr_request_failed">OCR Request failed: %1$s</string>
    <string name="failed_to_parse_ocr_result">Failed to parse OCR result</string>
    <string name="failed_to_process_image">Failed to process image: %1$s</string>
    <string name="cannot_open_image">Cannot open image</string>
    <string name="edit_image">Edit Image</string>
    <string name="processing">Processing...</string>
    <string name="login">Login</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="login_required_for_history">Please log in to use this feature.</string>
    <string name="no_history_found">No history found.</string>
    <string name="image_count">%d images</string>
    <string name="new_ocr_session">New OCR Session</string>
    <string name="delete_image_title">Delete Image</string>
    <string name="delete_image_confirmation">Are you sure you want to delete this image?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="login_to_view_history">Login to view history</string>
    <string name="delete_confirmation">Delete Confirmation</string>
    <string name="are_you_sure_delete_image">Are you sure you want to delete this image?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_session">Delete Session</string>
    <string name="delete_session_confirmation_title">Confirm Deletion</string>
    <string name="delete_session_confirmation_message">Are you sure you want to permanently delete this session?</string>
    <string name="stop_ocr">Stop OCR</string>
    <string name="stop_ocr_title">Stop Process</string>
    <string name="stop_ocr_confirmation">Are you sure you want to stop the OCR process?</string>
    <string name="ocr_stopped_message">OCR process stopped.</string>
    <string name="long_press_to_delete">Long-press on an image to delete it.</string>
    <string name="confirm">Confirm</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="thumbnail_image_preview">Thumbnail image preview</string>
    <string name="finding_corners">Finding document corners…</string>
    <string name="nav_header_guest">Guest User</string>
    <string name="nav_header_login">Login / Register</string>
    <string name="ocr_preview_image">OCR Preview Image</string>
    <string name="session_deleted">Session deleted</string>
    <string name="new_session_started">New session started</string>
    <string name="need_internet_vi">Cần internet để sửa lỗi chính tả</string>
    <string name="need_internet_en">Internet is required for spell check</string>
    <string name="spell_check_result">Spell Check Result</string>
    <string name="undo">Undo</string>
    <string name="spell_check_applied">Spell check applied!</string>
    <string name="undo_successful">Undo successful!</string>
    <string name="replacement_chosen">Replacement chosen for this word </string>
    <string name="no_suggestions_available">No suggestions available for this word.</string>
    <string name="new_session">New Session</string>
    <string name="logout">Log Out</string>
    <string name="no_results_available">No result available.</string>
    <string name="save_session">Save Session</string>
    <string name="spell_check_results_title">Spell Check Results</string>
    <string name="apply_changes">Apply</string>
    <string name="undo_changes">Undo</string>
</resources>